testsuite/tests/typecheck/should_fail/T15527.stderr

T15527.hs:4:6: error:
    @-syntax in expression context
    Did you mean to enable TypeApplications?
